# ClusterChatServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  client.sh  run.sh
include/: chatserver.h  public.hpp
include/server/: chatserver.hpp  chatservices.hpp  user.hpp  usermodel.hpp
include/server/friends/: friends.hpp
include/server/groups/: group.hpp  groupsmodel.hpp  groupuser.hpp  groupusermodel.hpp
include/server/message/: messge.hpp
include/server/models/friends/: friendsmodel.hpp
include/server/models/groups/: group.hpp  groupsmodel.hpp  groupusermodel.hpp
include/server/models/message/: messagemodel.hpp  messge.hpp
include/server/models/user/: user.hpp
include/server/redis/: redis.hpp
include/tools/: SingletonTemplate.hpp  database.hpp  public.hpp
scripts/: client.sh  run.sh
src/: CMakeLists.txt  chatserver.cc  main.cpp  public.cpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservices.cpp  goupsmodel.cpp  main.cpp  messagemodel.cpp  usermodel.cpp
src/server/model/: CMakeLists.txt  frinendsmodel.cpp  goupsmodel.cpp  groupusermodel.cpp  messagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
src/tools/: CMakeLists.txt  database.cpp  public.cpp
